Bug 163221 - Hovering the mouse over a Basic dialog will make it grow or crash (Dialog Editor)
Summary: Hovering the mouse over a Basic dialog will make it grow or crash (Dialog Edi...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: BASIC-Dialog-Designer
  Show dependency treegraph
 
Reported: 2024-09-30 18:42 UTC by Rafael Lima
Modified: 2024-12-07 07:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Video showing the problem (96.59 KB, video/mp4)
2024-09-30 18:42 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2024-09-30 18:42:58 UTC
Created attachment 196802 [details]
Video showing the problem

In current 25.2 master I'm getting a very weird behavior. If I hover the mouse over the dialog I'm creating in the Dialog Editor, the dialog will start growing for no reason.

Steps to reproduce
1) Open any LO app and go to Tools - Macros - Edit Macros
2) In the Object Catalog go to Application Macros - Gimmicks - ReadFolderDlg (it could be any dialog; I'm just choosing this one as an example)
3) Move the mouse over the dialog and keep moving it
4) Notice that the dialog will start growing

System info

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eb73e2c8b66ef3539e68ee8150e119bbe437955c
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Rafael Lima 2024-09-30 18:50:42 UTC
I'm not sure if this is related, but I noticed that when I start editing a dialog, I get an infinite loop calling:

warn:sfx.view:62113:62113:sfx2/source/view/viewsh.cxx:3353: SfxViewShell::GetColorConfigColor not overridden!
Comment 2 raal 2024-10-04 17:57:19 UTC
No repro with Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4787fd4fc86230893a6da309f45964116b3a67df
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: kf5 (cairo+xcb)
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 Buovjaga 2024-12-04 17:40:26 UTC
For me, it manifests as a crash. This started in 25.2 with commit 65d52af42f329bbe7c5e7d6ac617320f7faa4760
clang-tidy: performance-unnecessary-copy-initialization in svx

Rafael: can you verify this? It sounds kind of unusual, but I will add Noel to Cc.

No crash on Windows.

I noticed that in gen and gtk3 backends the dialog entries are not listed. I will bisect this and report it.

There also seems to be a change in how the dialog is rendered. I will look into it as well.
Comment 4 Buovjaga 2024-12-04 17:53:10 UTC
(In reply to Buovjaga from comment #3)
> I noticed that in gen and gtk3 backends the dialog entries are not listed. I
> will bisect this and report it.

This was only in my Arch-packaged version, so false alert I guess. Some packaging choice.
Comment 5 Rafael Lima 2024-12-04 18:28:20 UTC
(In reply to Buovjaga from comment #3)
> No crash on Windows.

Now I'm getting a crash as well. The dialog no longer grows.

Weirdly, this crash happens on my Kubuntu machine (Plasma 6.1, Wayland+Nvidia) but does not happen on my Fedora KDE machine (Plasma 6.2, Wayland+Intel).
Comment 6 Buovjaga 2024-12-04 18:51:22 UTC
(In reply to Buovjaga from comment #3)
> There also seems to be a change in how the dialog is rendered. I will look
> into it as well.

Reported as bug 164168
Comment 7 Commit Notification 2024-12-06 17:21:16 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a60617b1f2f1eca31177867e575bed57b1b448a3

tdf#163221 crash in dialog editor

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Buovjaga 2024-12-06 18:52:36 UTC
No badness with hover anymore, thanks

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a60617b1f2f1eca31177867e575bed57b1b448a3
CPU threads: 8; OS: Linux 6.12; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Comment 9 Commit Notification 2024-12-07 07:33:39 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/950e17c1030490928e045600f4b9253c90795a71

tdf#163221 crash in dialog editor

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.