tdf#163221 crash in dialog editor

regression from
commit 65d52af42f329bbe7c5e7d6ac617320f7faa4760
clang-tidy: performance-unnecessary-copy-initialization in svx

Change-Id: I48428fe08acdf9590a533c7ea91abe905713b292
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177979
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>